--- a/7website-navigation/index.html
+++ b/7website-navigation/index.html
@@ -12,7 +12,7 @@
 <button class="back-to-top">↑ Back to Top</button>
 
 <div style="height: 2000px;">
-  Scroll down to test the behavior...
+  Scroll down to test the behavior
 </div>
 
 </body>
